$Id: ChangeLog,v 1.139 2005/12/10 14:14:40 h_oudejans Exp $

2005-12-11 Herman Oudejans <hn.oudejans@quicknet.nl>
	* Fixed scale_factor in videocontrols
	
2005-12-10 Herman Oudejans <hn.oudejans@quicknet.nl>
	* Added recordmode to the cassette controls
	* Fixed the aboutbox in windows (due to a bug in wxWidgets 2.6)

2005-12-08 Manuel Bilderbeek <manuel@msxnet.org>
	* Add controls for separate scaler factor and scaler algorithm. WIP,
	  because scaler factor is not an EnumSetting (yet?), this still needs
	  work.

2005-11-20 Herman Oudejans <hn.oudejans@quicknet.nl>
	* Fixed problems with ejecting media
	* removed code duplication with ejecting media

2005-11-04 Manuel Bilderbeek <manuel@msxnet.org>
	* Also check if executable can be found just before starting to
	  prevent problems if the executable was renamed/moved/deleted in the
	  mean time

2005-10-23 Herman Oudejans <hn.oudejans@quicknet.nl>
	* Implemented 'Hide Broken Configurations'

2005-10-22 Herman Oudejans <hn.oudejans@quicknet.nl>
	* Fixed dialog size problem with wx2.6
	* Fixed several segfaults when the current machine isn't valid.
	* Fixed configuration check for paths with a space in it
	* Added menu item for the 'Display Broken Configurations' option.

2005-10-18 Herman Oudejans <hn.oudejans@quicknet.nl>
	* Rewrote the communication between CheckConfigsDialog and it's
	   thread using messages.

2005-10-15 Herman Oudejans <hn.oudejans@quicknet.nl>
	* Machine and Extensionlists are now updated and saved.

2005-10-14 Manuel Bilderbeek <manuel@msxnet.org>
	* Updated configuration check to work on my system. :)
	  - the form needed more space for several stuff to work properly
	    (Herman, please check if this can be done in a better way.)
	  - fix compilation issues
	  - small cleanups (still a lot TODO, though)
	  - don't output stdout stuff from openMSX to stdout
	  - still WIP!

2005-10-14 Herman Oudejans <hn.oudejans@quicknet.nl>
	* Added configuration check (WIP).
