@@ -1,11 +1,11 @@
 <?xml version="1.0"?>
-<!-- generated by wxGlade 0.3.1 on Sat Apr 17 15:01:41 2004 -->
+<!-- generated by wxGlade 0.4cvs on Wed Dec 28 16:31:06 2005 -->
 
-<application path="../../resources/dialogs/config.xrc" name="" class="" option="0" language="XRC" top_window="" encoding="ISO-8859-1" use_gettext="0" overwrite="0">
+<application path="../../resources/dialogs/config.xrc" name="" class="" option="0" language="XRC" top_window="" encoding="ISO-8859-1" use_gettext="0" overwrite="0" use_new_namespace="0" for_version="2.6">
     <object class="wxDialog" name="ConfigurationDialog" base="EditDialog">
         <style>wxDEFAULT_DIALOG_STYLE</style>
         <title>Catapult configuration</title>
-        <size>638, 163</size>
+        <size>638, 179</size>
         <object class="wxBoxSizer" name="ConfigurationTopSizer" base="EditBoxSizer">
             <orient>wxVERTICAL</orient>
             <object class="sizeritem">
@@ -78,8 +78,8 @@
                                 <border>5</border>
                                 <option>0</option>
                                 <object class="wxButton" name="ConfigBrowseExec" base="EditButton">
-                                    <tooltip>Browse</tooltip>
                                     <label>...</label>
+                                    <tooltip>Browse</tooltip>
                                 </object>
                             </object>
                             <object class="sizeritem">
@@ -87,10 +87,28 @@
                                 <border>5</border>
                                 <option>0</option>
                                 <object class="wxButton" name="ConfigBrowseShare" base="EditButton">
-                                    <tooltip>Browse</tooltip>
                                     <label>...</label>
+                                    <tooltip>Browse</tooltip>
                                 </object>
                             </object>
+                        </object>
+                    </object>
+                </object>
+            </object>
+            <object class="sizeritem">
+                <flag>wxEXPAND</flag>
+                <border>0</border>
+                <option>1</option>
+                <object class="wxBoxSizer" name="sizer_1" base="EditBoxSizer">
+                    <orient>wxHORIZONTAL</orient>
+                    <object class="sizeritem">
+                        <flag>wxALL</flag>
+                        <border>0</border>
+                        <option>0</option>
+                        <object class="wxCheckBox" name="configCheck" base="EditCheckBox">
+                            <checked>1</checked>
+                            <label>Check for working hardware configurations after closing this dialog</label>
+                            <tooltip>Check this box if you want Catapult to initiate a check of which hardware configurations for openMSX are working. See also Test openMSX Hardware (File menu) and Display Broken Configrations (View menu).</tooltip>
                         </object>
                     </object>
                 </object>
